--- a/blackjack.html
+++ b/blackjack.html
@@ -17,7 +17,8 @@
       <label>Dealer: </label>
       <label id="dealer-points" class="points"></label>
       <div id="dealer-hand" class="hand">
-
+<!-- hello -->
+<div>.</div>
       </div>
 
       <label>Player: </label>
