--- a/blackjack.html
+++ b/blackjack.html
@@ -19,6 +19,8 @@
       <div id="dealer-hand" class="hand">
 <!-- hello -->
 <div>.</div>
+<div>.</div>
+
       </div>
 
       <label>Player: </label>
